test/bpmn/invalid/event-based-gateway-one.bpmn
<definitions id="test">
  <process id="eventBasedGatewayOneTest" isExecutable="true">
    <startEvent id="startEvent">
      <outgoing>f1</outgoing>
    </startEvent>
    <sequenceFlow id="f1" sourceRef="startEvent" targetRef="eventBasedGateway" />
    <eventBasedGateway id="eventBasedGateway">
      <incoming>f1</incoming>
      <outgoing>f2</outgoing>
    </eventBasedGateway>
    <sequenceFlow id="f2" sourceRef="eventBasedGateway" targetRef="messageCatchEvent" />
    <intermediateCatchEvent id="messageCatchEvent">
      <incoming>f2</incoming>
      <outgoing>f3</outgoing>
      <messageEventDefinition id="messageCatchEventDefinition" />
    </intermediateCatchEvent>
    <sequenceFlow id="f3" sourceRef="messageCatchEvent" targetRef="messageEnd" />
    <endEvent id="messageEnd">
      <incoming>f3</incoming>
    </endEvent>
  </process>
</definitions>
